--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Felipa&display=swap');
 @import "tailwindcss";
+
+@theme {
+    --font-playwrite-au: Edu AU VIC WA NT Arrows, 'sans-serif';
+    --font-felipa: felipa, 'sans-serif'
+}
 
 html {
     scroll-behavior: smooth;
 }
-.mainLightTheme :is(h1) {
+
+/* .mainLightTheme :is(h1) {
     color: black;
 }
 
 .mainDarkTheme :is(h1) {
     color: white;
-}
+} */
+
+
+.swiper-wrapper {
+    transition-timing-function: linear !important;
+  }
