--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Felipa&display=swap');
 @import "tailwindcss";
+@plugin "daisyui";
 
 @theme {
     --font-playwrite-au: Edu AU VIC WA NT Arrows, 'sans-serif';
